--- a/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
@@ -17,10 +17,10 @@ Pitää kohteen terävänä ja sumentaa taustan."</string>
   <string name="access_sd_fail">SD-korttia ei voi käyttää.</string>
   <string name="accessibility_audio_shutter_bg">Äänisulkijan tausta</string>
   <string name="accessibility_back_preview_status">Takakameran esikatselu</string>
-  <string name="accessibility_beauty_panel_closed">Kaunista-valikko on piilotettu</string>
-  <string name="accessibility_beauty_panel_open">Kaunista-valikko on avattu</string>
-  <string name="accessibility_beauty_switch_closed">Kaunista pois käytöstä</string>
-  <string name="accessibility_beauty_switch_open">Kaunista käytössä</string>
+  <string name="accessibility_beauty_panel_closed">Kaunistusvalikko on piilotettu</string>
+  <string name="accessibility_beauty_panel_open">Kaunistusvalikko on avattu</string>
+  <string name="accessibility_beauty_switch_closed">Kaunistus pois käytöstä</string>
+  <string name="accessibility_beauty_switch_open">Kaunistus käytössä</string>
   <string name="accessibility_bokeh_adjust">Säädetään tastasumennusta</string>
   <string name="accessibility_bokeh_level">F%1$s aukko</string>
   <string name="accessibility_bokeh_normal">Etukameran taustan sumennus pois käytöstä</string>
@@ -108,7 +108,7 @@ ja optimoi valokuvasi näiden tietojen perusteella"</string>
   <string name="beauty_mode_reset_toast">Tyhjennettiin uudelleenmuotoilutehosteet onnistuneesti</string>
   <string name="beauty_reset">Palauta</string>
   <string name="beauty_reset_toast">Palautettiin Kauneustehosteet onnistuneesti</string>
-  <string name="beauty_tab_name_live_beauty">Kaunista</string>
+  <string name="beauty_tab_name_live_beauty">Kaunistus</string>
   <string name="beauty_tab_name_live_filter">Suodattimet</string>
   <string name="bokeh_use_hint">Syvyystehoste</string>
   <string name="burst_shoot_exit_button_text">Poista Sarjakuvaus käytöstä</string>
@@ -255,7 +255,7 @@ ja luo otoksen, jossa kuvassa on vähiten kohinaa."</string>
   <string name="hint_fast_motion">Video, jonka otat toistetaan nopeammin.</string>
   <string name="hint_groupshot">"Kamera ottaa useita kuvia
 ja luo otoksen, jossa kaikki ovat parhaimmillaan."</string>
-  <string name="hint_groupshot_beauty">Kaunista-toimintoa ei voi käyttää ryhmäkuvissa</string>
+  <string name="hint_groupshot_beauty">Kaunistusta ei voi käyttää ryhmäkuvissa</string>
   <string name="hint_slow_motion">Video, jonka otat toistetaan hitaammin.</string>
   <string name="hunt_dual_water_mark">Kaksoiskameran vesileima lisätään automaattisesti.</string>
   <string name="image_file_name_format">"'IMG'_yyyyMMdd_HHmmss"</string>
@@ -317,19 +317,68 @@ Muotokuvatilassa"</string>
   <string name="message_snap_double_confirm">Äänenvoimakkuuspainikkeen pitkä painallus käynnistää tällä hetkellä NFC:n. Korvataanko tämä ominaisuus?</string>
   <string name="mimoji_back">Takaisin</string>
   <string name="mimoji_cancle">Peruuta</string>
-  <string name="mimoji_confirm">Vahvista</string>
-  <string name="mimoji_delete_mimoji">Poista emoji</string>
-  <string name="mimoji_delete_success">Poistaminen onnistui</string>
-  <string name="mimoji_edit_mimoji">Muokkaa emojia</string>
+  <string name="mimoji_check_beyond_20_degrees">Katso suoraan kameraan</string>
+  <string name="mimoji_check_face_occlusion">Älä peitä kasvoja</string>
+  <string name="mimoji_check_face_too_close">Siirrä kameraa kauemmaksi kasvoista</string>
+  <string name="mimoji_check_face_too_far">Siirrä kameraa lähemmäksi kasvoja</string>
+  <string name="mimoji_check_low_light">On liian pimeää</string>
+  <string name="mimoji_check_multi_face">Yksi henkilö kerrallaan!</string>
+  <string name="mimoji_check_no_face">Kasvoja ei voitu tunnistaa</string>
+  <string name="mimoji_check_normal">Napauta sulkijapainiketta</string>
+  <string name="mimoji_confirm">OK</string>
+  <string name="mimoji_create_tips">Katso suoraan kameraan luodaksesi Mimojisi</string>
+  <string name="mimoji_delete">Poista</string>
+  <string name="mimoji_delete_dialog_title">Poistetaanko Mimoji?</string>
+  <string name="mimoji_delete_mimoji">Poista Mimoji</string>
+  <string name="mimoji_delete_success">Poistettiin onnistuneesti</string>
+  <string name="mimoji_detect_faceshape_failed">Kasvojen muotoa ei tunnistettu</string>
+  <string name="mimoji_detect_facial_failed">Kasvoja ei nähty</string>
+  <string name="mimoji_detect_gender_failed">Sukupuolta ei tunnistettu</string>
+  <string name="mimoji_detect_glass_failed">Silmälaseja ei nähty</string>
+  <string name="mimoji_detect_haircolor_failed">Hiusväriä ei tunnistettu</string>
+  <string name="mimoji_detect_hairstyle_failed">Hiuksia ei nähty</string>
+  <string name="mimoji_detect_no_face_failed">Kasvoja ei nähty</string>
+  <string name="mimoji_detect_skincolor_failed">Ihon väriä ei tunnistettu</string>
+  <string name="mimoji_detect_tips">Pidä kasvosi kehyksen sisällä</string>
+  <string name="mimoji_detect_unknow_failed">Tuntematon virhe</string>
+  <string name="mimoji_ear">Korvat</string>
+  <string name="mimoji_earring">Korvakorut</string>
+  <string name="mimoji_edit_abandon_alert">Hylätäänkö kaikki muutokset?</string>
+  <string name="mimoji_edit_abandon_capture_alert">Hylätäänkö kaikki muutokset?</string>
+  <string name="mimoji_edit_back_alert">Kaikki muutokset hylätään kun siirryt takaisin. Siirrytäänkö takaisin siitä huolimatta?</string>
+  <string name="mimoji_edit_cancel_alert">Kaikki muutokset hylätään. Peruutetaanko siitä huolimatta?</string>
+  <string name="mimoji_edit_mimoji">Muokkaa Mimojia</string>
   <string name="mimoji_editor">Muokkaa</string>
+  <string name="mimoji_eye">Silmät</string>
+  <string name="mimoji_eye_shape">Silmän muoto</string>
+  <string name="mimoji_eyebrow">Kulmakarvat</string>
+  <string name="mimoji_eyebrow_shape">Kulmakarvojen muoto</string>
+  <string name="mimoji_eyeglass">Silmälasit</string>
+  <string name="mimoji_eyelash">Silmäripset</string>
+  <string name="mimoji_featured_face">Kasvot</string>
   <string name="mimoji_fragment_tab_name">Mimoji</string>
-  <string name="mimoji_recapture">Ota uudelleen</string>
+  <string name="mimoji_freckle">Pisamat</string>
+  <string name="mimoji_hairstyle">Hiukset</string>
+  <string name="mimoji_headwear">Hats</string>
+  <string name="mimoji_mole">Luomet</string>
+  <string name="mimoji_mouth_type">Suu</string>
+  <string name="mimoji_mustache">Parta</string>
+  <string name="mimoji_nose">Nenä</string>
+  <string name="mimoji_nose_lisps">Nenä ja huulet</string>
+  <string name="mimoji_on_create">Luo Mimoji</string>
+  <string name="mimoji_ornament">Asusteet</string>
+  <string name="mimoji_recapture">Aloita alusta</string>
+  <string name="mimoji_recapture_alert">Kaikki muutokset hylätään, kun aloitat alusta. Aloitetaanko alusta siitä huolimatta?</string>
+  <string name="mimoji_reset">Nollaa</string>
   <string name="mimoji_save">Tallenna</string>
   <string name="mimoji_save_success">Tallennettiin onnistuneesti</string>
   <string name="mimoji_selected">Valitse</string>
-  <string name="module_name_beauty">Kauneus</string>
+  <string name="mimoji_start_create">Luodaan Mimojia…</string>
+  <string name="mimoji_tips">Ota kuva napauttamalla. Nauhoita video painamalla ja pitämällä pohjassa.</string>
+  <string name="module_name_beauty">Kaunistus</string>
   <string name="module_name_capture">Kuva</string>
   <string name="module_name_fun">Lyhyt video</string>
+  <string name="module_name_fun_ar">Hauska</string>
   <string name="module_name_manual">Manuaalinen</string>
   <string name="module_name_panorama">Panoraama</string>
   <string name="module_name_portrait">Muotokuva</string>
@@ -403,8 +452,8 @@ ja tuo henkilöt esiin."</string>
   <string name="pref_camera_beautify_entry_high">Korkea</string>
   <string name="pref_camera_beautify_entry_low">Matala</string>
   <string name="pref_camera_beautify_entry_normal">Keskitaso</string>
-  <string name="pref_camera_beauty">Kaunista</string>
-  <string name="pref_camera_beauty_deep">Kaunista Pro</string>
+  <string name="pref_camera_beauty">Kaunistus</string>
+  <string name="pref_camera_beauty_deep">Kaunistus Pro</string>
   <string name="pref_camera_bokeh_title">Muotokuva</string>
   <string name="pref_camera_coloreffect_entry_big_face">Levitä</string>
   <string name="pref_camera_coloreffect_entry_blackwhite">Mustavalkoinen</string>
@@ -510,7 +559,7 @@ ja tuo henkilöt esiin."</string>
   <string name="pref_camera_portrait_mode_entry_off">Muotokuvatila pois käytöstä</string>
   <string name="pref_camera_portrait_mode_entry_on">Muotokuvatila käytössä</string>
   <string name="pref_camera_portrait_mode_title">Muotokuvatila</string>
-  <string name="pref_camera_portrait_with_facebeauty_title">Kaunista Muotokuvatilassa</string>
+  <string name="pref_camera_portrait_with_facebeauty_title">Kaunistus Muotokuvatilassa</string>
   <string name="pref_camera_proximity_lock_summary">Lukitse kosketuseleet, kun laitetaan taskuun</string>
   <string name="pref_camera_proximity_lock_title">Taskutila</string>
   <string name="pref_camera_quick_shot_anim_enable_title">Ota nopean kuvan animaatio käyttöön</string>
@@ -671,7 +720,7 @@ ja tuo henkilöt esiin."</string>
   <string name="simple_mode_button_text_audio_capture">Poista äänilaukaisin käytöstä</string>
   <string name="simple_mode_button_text_color_effect">Poista suodatin käytöstä</string>
   <string name="simple_mode_button_text_delay_capture">Poista ajastin käytöstä</string>
-  <string name="simple_mode_button_text_face_beauty">Poista Kaunista käytöstä</string>
+  <string name="simple_mode_button_text_face_beauty">Poista Kaunistus käytöstä</string>
   <string name="simple_mode_button_text_fast_video">Poista hidastus käytöstä</string>
   <string name="simple_mode_button_text_gradienter">Poista Suorista käytöstä</string>
   <string name="simple_mode_button_text_groupshot">Poista Ryhmäselfie käytöstä</string>
