--- a/Finnish/main/Settings.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Settings.apk/res/values-fi-rFI/strings.xml
@@ -332,21 +332,6 @@ Aseta vain laitteet vierekkäin (yleensä takakannet vastakkain) ja kosketa näy
   <string name="another_migration_already_in_progress">Toinen siirto on jo käynnissä.</string>
   <string name="anti_spam">Estolista</string>
   <string name="aod_clock_style_title">Kellon tyyli</string>
-  <string name="aod_close_color_inversion">Tätä ominaisuutta ei voi yhdistää käänteisen värin kanssa. Poista käänteinen väri ensin käytöstä.</string>
-  <string name="aod_got_it">Selvä</string>
-  <string name="aod_lock_screen_date">"EEEE d. MMMM'ta'"</string>
-  <string name="aod_lock_screen_date_12">"EEEE d. MMMM'ta'"</string>
-  <string name="aod_mode_bg">Tausta</string>
-  <string name="aod_mode_clock">Kello</string>
-  <string name="aod_mode_style">Kellon tyyli ja tausta</string>
-  <string name="aod_mode_summary">Tämä ominaisuus nostaa järjestelmän virrankäyttöä. Se sammuu, kun laitteesi on ollut tarpeeksi kauan pimeässä tai Virransäästörajoituksia on otettu käyttöön.</string>
-  <string name="aod_mode_time_summary">Ajasta milloin laitteesi tulisi siirtyä Aina käytössä -tilaan</string>
-  <string name="aod_mode_time_title">Ajastus</string>
-  <string name="aod_mode_title">Aina käytössä -tila</string>
-  <string name="aod_mode_turn_off">Pois käytöstä</string>
-  <string name="aod_mode_turn_on">Käytössä</string>
-  <string name="aod_sample_date">Tiistai 10. Toukokuuta</string>
-  <string name="aod_to_close">Poista käytöstä</string>
   <string name="apn_apn">APN</string>
   <string name="apn_auth_type">Todennustyyppi</string>
   <string name="apn_auth_type_chap">CHAP</string>
@@ -816,7 +801,7 @@ Varmista, että laite esittää tämän koodin:
   <string name="bluetooth_device_context_pair_connect">Muodosta laitepari ja yhdistä</string>
   <string name="bluetooth_device_context_unpair">Poista laitepariyhteys</string>
   <string name="bluetooth_device_details">Laiteasetukset</string>
-  <string name="bluetooth_device_misc_title">Harvoin käytetyt Bluetooth -laitteet</string>
+  <string name="bluetooth_device_misc_title">Harvoin käytetyt laitteet</string>
   <string name="bluetooth_device_name">Nimi:</string>
   <string name="bluetooth_device_searchable">Tunnistettavuus</string>
   <string name="bluetooth_devices">Bluetooth-laitteet</string>
@@ -1252,6 +1237,22 @@ Tämän ominaisuuden voi poistaa käytöstä [Asetuksista]"</string>
   <string name="color_cyan">Turkoosi</string>
   <string name="color_gray">Harmaa</string>
   <string name="color_green">Vihreä</string>
+  <string name="color_led_applications_title">Valitse sovellukset</string>
+  <string name="color_led_applications_title_summary">Voit rajoittaa LED-valon käyttöä yksittäisille sovelluksille</string>
+  <string name="color_led_battery_title">Pidä päällä latauksen aikana</string>
+  <string name="color_led_end_time">Lopetusaika</string>
+  <string name="color_led_game_mode_title">Game Turbo</string>
+  <string name="color_led_hint">Valitse skenaariot, joissa LED-valoa tulisi käyttää. LED-valo syttyy, kun näyttö on asetetty alaspäin ja Älä häiritse -tila on pois käytöstä.</string>
+  <string name="color_led_incall_pulse_title">Vilkuta saapuville puheluille</string>
+  <string name="color_led_lucky_dialog_message">Tämä ominaisuus vaatii Punaisen kirjejuoren avustajan käyttämisen. Otetaanko käyttöön nyt?</string>
+  <string name="color_led_lucky_dialog_title">Ota Punaisen kirjejuoren avustaja käyttöön</string>
+  <string name="color_led_music_mode_summary">Näytä rytmisiä valotehosteita musiikin toiston aikana</string>
+  <string name="color_led_music_mode_title">Musiikki</string>
+  <string name="color_led_notification_pulse_title">Vilkuta ilmoituksille</string>
+  <string name="color_led_red_more_feature">Erikoistehosteet</string>
+  <string name="color_led_red_package_title">Punaiset kirjekuoret</string>
+  <string name="color_led_start_time">Aloitusaika</string>
+  <string name="color_led_title">LED-valo</string>
   <string name="color_magenta">Magenta</string>
   <string name="color_none">Ei mitään</string>
   <string name="color_orange">Oranssi</string>
@@ -2816,8 +2817,10 @@ PIN-koodi"</string>
   <string name="long_press_buttom_key">Paina Koti-painiketta pitkään Lukitusnäytöllä</string>
   <string name="long_press_home_key">Paina Koti-painiketta pitkään</string>
   <string name="long_press_menu_key">Paina Valikko-painiketta pitkään</string>
-  <string name="long_press_menu_key_when_lock">Paina Valikko-painiketta pitkään Lukitusnäytöllä</string>
+  <string name="long_press_menu_key_when_lock">Paina Valikkopainiketta pitkään Lukitusnäytöllä</string>
+  <string name="long_press_power_key">Virtapainikkeen pitkä painallus</string>
   <string name="long_press_power_key_half_of_second">Paina ja pidä pohjassa Virtapainiketta 0.5 sekunnin ajan käynnistääksesi Google Assistantin</string>
+  <string name="long_press_power_key_tips">Paina Virtapainiketta pitkään nopeammin ja kätevämmin</string>
   <string name="long_press_volume_down">Paina Äänenvoimakkuus alas-painiketta pitkään</string>
   <string name="lost_internet_access_cancel">Jatka Wi-Fi-yhteydellä</string>
   <string name="lost_internet_access_persist">Älä näytä uudelleen</string>
@@ -5193,6 +5196,8 @@ Se on Googlen tapa synkronoida tietoja, ja sen avulla voit käyttää yhteystiet
   <string name="toast_lockscreen_glogin_empty_password">Syötä salasana</string>
   <string name="toast_need_login">Kirjaudu sisään Mi Tilillesi</string>
   <string name="toast_sta_ap_works_wifi_display_disable">Ei voi suoratoistaa, kun Wi-Fi-yhteys on muodostettu ja hotspot on käytössä.</string>
+  <string name="toggle_auto_speaker_preference_summary">Laite vaihtaa kaiuttimelle, kun siirrät sitä kauemmaksi korvaltasi puhelun aikana. Tämä ominaisuus toimii vain, kun TalkBack on käytössä.</string>
+  <string name="toggle_auto_speaker_preference_title">Vaihda kaiuttimelle automaattisesti</string>
   <string name="toggle_collapse_after_clicked_title">Tiivistä kosketuksen jälkeen</string>
   <string name="total">Älä häiritse</string>
   <string name="total_info">Mykistä äänet ja poista värinä käytöstä paitsi hälytyksiltä</string>
