--- a/Finnish/main/Backup.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Backup.apk/res/values-fi-rFI/strings.xml
@@ -207,6 +207,10 @@ https://appleid.apple.com/#!&amp;page=signin poistaaksesi käytöstä"</string>
   <string name="dialog_app_upgrade_download">Päivitä</string>
   <string name="dialog_app_upgrade_exit">Poistu</string>
   <string name="dialog_app_upgrade_message">Mi Moverista on uusi versio saatavilla. Päivitetäänkö Mi Mover nyt?</string>
+  <string name="dialog_backup_password_backup_tips">Kohteita ei voi varmuuskopioida, kun varmuuskopion salasana on käytössä. Poista varmuuskopion salasana käytöstä.</string>
+  <string name="dialog_backup_password_cancel">Peruuta</string>
+  <string name="dialog_backup_password_change_machine_tips">Et voi siirtää salasana-suojattuja varmuuskopioita. Poista varmuuskopion salasana käytöstä ennen Mi Moverin käyttämistä.</string>
+  <string name="dialog_backup_password_to_settings">Asetukset</string>
   <string name="dir_date_format">yyyyMMdd_HHmmss</string>
   <string name="disable_encrypt_description">Älä salaa</string>
   <string name="disable_encrypt_title">Poista salaus käytöstä</string>
