--- a/Finnish/main/PowerKeeper.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/PowerKeeper.apk/res/values-fi-rFI/strings.xml
@@ -82,8 +82,8 @@ Virransäästö kohtelee tärkeitä sovelluksia valikoivasti."</string>
   <string name="power_usage">Virrankäyttö</string>
   <string name="pref_config_title">Suorituskyvyn optimointi</string>
   <string name="privacy">Tietosuojakäytäntö</string>
-  <string name="scenario_policies_summary">Aseta erilaisia virransäästöjä eri skeneille.</string>
-  <string name="scenario_policies_title">Älyskenet</string>
+  <string name="scenario_policies_summary">Aseta erilaisia virransäästöjä eri näkymille.</string>
+  <string name="scenario_policies_title">Älynäkymät</string>
   <string name="scenario_policies_warmcontrol">Lämpötilan hallinta</string>
   <string name="search_result_text">Sovelluksia ei löytynyt</string>
   <string name="show_system_app">Näytä järjestelmäsovellukset</string>
