--- a/Finnish/main/SecurityCenter.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/SecurityCenter.apk/res/values-fi-rFI/strings.xml
@@ -1506,6 +1506,8 @@ Kokeile käyttää toista ethernet-kaapelia reitittimesi yhdistämiseen. Jos luu
   <string name="note_sms_none">Ei viestejä</string>
   <string name="noti_back_diving_mode_title">Immersiivinen tila otettiin käyttöön. Poista käytöstä napauttamalla.</string>
   <string name="notification_battery_consume_abnormal_title">Akku tyhjenee liian nopeasti</string>
+  <string name="notification_battery_scan_consume_abnormal_summary">Korjaa ongelma napauttamalla</string>
+  <string name="notification_battery_scan_consume_abnormal_title_set">%s kuluttaa akkua</string>
   <string name="notification_exit_power_save_mode">Virransäästö poistettiin käytöstä</string>
   <string name="notification_exit_power_save_mode_subtitle">Akku %s ladattu.</string>
   <string name="notification_mask_summary">Piilota ilmoituksen sisältö Lukitusnäytöltä ja Ilmoitusalueelta</string>
@@ -1632,6 +1634,13 @@ Kokeile käyttää toista ethernet-kaapelia reitittimesi yhdistämiseen. Jos luu
   <string name="password_type">Vaihda salasana</string>
   <string name="password_type_underline">Vaihda salasana</string>
   <string name="password_xspace_forget_pattern_message">Vaihtaaksesi Toisen tilan salasanasi, sinun täytyy poistaa nykyinen Toinen tila ja luoda uusi.</string>
+  <string name="pc_abnormal_scan_button_text">Sulje sovellukset</string>
+  <string name="pc_abnormal_scan_reason_prevent_standby">Estää järjestelmän menemästä valmiustilaan</string>
+  <string name="pc_abnormal_scan_reason_reconnect">Yrittää yhdistää verkkoon liian usein</string>
+  <string name="pc_abnormal_scan_reason_runtime_exception">Käy epänormaalisti</string>
+  <string name="pc_abnormal_scan_reason_scan_wifi">Hakee Wi-Fiä liian usein</string>
+  <string name="pc_abnormal_scan_reason_use_GPS">Käyttää sijaintipalveluita liian usein</string>
+  <string name="pc_abnormal_scan_reason_wake_system">Herättää järjestelmää liian usein</string>
   <string name="pc_activity_title">Optimoi akku</string>
   <string name="pc_battery_history_show_imei">IMEI:</string>
   <string name="pc_install_manager">Asenna USB:n kautta</string>
