--- a/Finnish/main/Weather.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Weather.apk/res/values-fi-rFI/strings.xml
@@ -289,6 +289,9 @@ Lisää kaupunki manuaalisesti napauttamalla"</string>
   <string name="traffic_control_tomorrow_numbers">Huomenna: %1$s</string>
   <string name="traffic_controls">Tienkäytön säännöstely</string>
   <string name="translate_notification_info">Käännetään taustalla…</string>
+  <string name="tts_best_aqi">Paras ilmanlaatu</string>
+  <string name="tts_hour_weather_date_time">%2$s klo %1$s - %4$s klo %3$s</string>
+  <string name="tts_max_wind_power">Suurin tuulen nopeus</string>
   <string name="unit">Yksiköt</string>
   <string name="unit_temperature">Lämpötilan yksiköt</string>
   <string name="unit_wind">Tuulen nopeuden yksiköt</string>
