--- a/Finnish/main/framework-ext-res.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/framework-ext-res.apk/res/values-fi-rFI/strings.xml
@@ -101,6 +101,7 @@
   <string name="popup_camera_calibrate_now">Kalibroi</string>
   <string name="popup_camera_calibrate_success">Kalibroitiin onnistuneesti. Voit avata etukameran nyt.</string>
   <string name="popup_camera_front_failed">Etukameraa ei voitu avata. Yritä uudelleen</string>
+  <string name="popup_camera_front_when_use">Kamerasovelluksen täytyy avata etukamera uudelleen. Avataanko nyt?</string>
   <string name="popup_camera_popup_falied_times_calibrate">Etukameraa ei voitu avata useaan kertaan. Yritä kameran kalibrointia.</string>
   <string name="popup_camera_sure">Selvä</string>
   <string name="popup_camera_sure_wait">Selvä (%d s)</string>
@@ -201,6 +202,7 @@
   <string name="twohours">1 tunti</string>
   <string name="unknown_caller">Tuntematon numero</string>
   <string name="user_switching_dialog_text">Vaihdetaan käyttäjää…</string>
+  <string name="voice_assistant_tips">Päivitetiin virtapainikkeen pitkä painallus herättämään ääniavustaja</string>
   <string name="voice_begin">Mitä etsit?</string>
   <string name="voice_button_action_down">Vapauta hakeaksesi</string>
   <string name="voice_button_action_up">Paina puhuaksesi</string>
