--- a/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
@@ -376,7 +376,7 @@ Muotokuvatilassa"</string>
   <string name="module_name_beauty">Kaunistus</string>
   <string name="module_name_capture">Kuva</string>
   <string name="module_name_fun">Lyhyt video</string>
-  <string name="module_name_fun_ar">Hauska</string>
+  <string name="module_name_fun_ar">Mimoji</string>
   <string name="module_name_manual">Manuaalinen</string>
   <string name="module_name_panorama">Panoraama</string>
   <string name="module_name_portrait">Muotokuva</string>
