--- a/Finnish/main/PersonalAssistant.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/PersonalAssistant.apk/res/values-fi-rFI/strings.xml
@@ -32,18 +32,18 @@
   <string name="miot_device_add_device">Lisää laite</string>
   <string name="miot_device_all_device">Kaikki laitteet</string>
   <string name="miot_device_cancel">Peruuta</string>
-  <string name="miot_device_card_title">Mi Home</string>
-  <string name="miot_device_click_show_detail">(Napauta lisätietoja älykkäistä kodin laitteista)</string>
+  <string name="miot_device_card_title">Mi Home -laitteet</string>
+  <string name="miot_device_click_show_detail">Napauta saadaksesi lisätietoja kodin älylaitteista.</string>
   <string name="miot_device_cta_and"> ja </string>
   <string name="miot_device_cta_end">. (</string>
-  <string name="miot_device_cta_message">Lisää älylaitteitasi hallitaksesi niitä. Hyväksy napauttamalla Valtuuta</string>
+  <string name="miot_device_cta_message">"Lisää älylaitteesi hallitaksesi niitä Sovellusholvista. Napauttamalla alapuolella olevaa \"Hyväksyn\" -painiketta, hyväksyt meidän "</string>
   <string name="miot_device_cta_priv">Tietosuojakäytäntö.</string>
   <string name="miot_device_cta_use_info">Mi Home Käyttöehdot</string>
   <string name="miot_device_edit">Muokkaa</string>
   <string name="miot_device_edit_device">Järjestä laitteita uudelleen</string>
   <string name="miot_device_empty_text">Lisää ilmanpuhdistaja, kamera, robotti-imuri tai muista älylaitteita hallitaksesi niitä.</string>
   <string name="miot_device_install_mijia">Lataa</string>
-  <string name="miot_device_introduction">Ohjaa nopeasti älylaitteita (Katso pyyhkäisemällä Sovellusholvissa alaspäin)</string>
+  <string name="miot_device_introduction">Pyyhkäise Sovellusholvissa alaspäin nähdäksesi saatavilla olevat älylaitteiden ohjaimet</string>
   <string name="miot_device_loading">Ladataan…</string>
   <string name="miot_device_login">Kirjaudu sisään</string>
   <string name="miot_device_mijia_logout_message">Sinun täytyy kirjautua sisään Mi Tililläsi, ennen kuin voit lisätä tai käyttää laitteita. Haluatko kirjautua sisään nyt?</string>
@@ -919,7 +919,7 @@ Useita tilauksia, jotka lähetetään SF Expressin kautta Taobaon, Tmallin ja Xi
   <string name="preload_empty">Täällä ei ole vielä kohteita. Päivitä vetämällä alaspäin.</string>
   <string name="qq_new">Uusi tila</string>
   <string name="qq_qzone">Qzone</string>
-  <string name="quick_app_setting_brief">Viimeksi käytetyt pikasovellukset (Katso pyyhkäisemällä Sovellusholvissa alaspäin)</string>
+  <string name="quick_app_setting_brief">Pyyhkäise Sovellusholvissa alaspäin nähdäksesi viimeksi käytetyt pikasovellukset</string>
   <string name="quick_app_setting_brief_detail">Katso kaikkia pikasovelluksia, joita olet viimeksi käyttänyt</string>
   <string name="quick_app_title">Viimeksi käytetyt pikasovellukset</string>
   <string name="quickstart_accessibility_description">Sovellusholvi tarjoaa pikakuvakkeita valituille kolmannen osapuolen sovelluksille. Nämä pikakuvakkeet ei toimi, jos otat ominaisuuden pois käytöstä.</string>
